bullmq/k8s/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: "redis"
spec:
  ports:
    - port: 6379
      targetPort: http
      protocol: TCP
      name: http
  selector:
    deploymentconfig: "redis"
    app.kubernetes.io/name: "redis"
